--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,9 @@
 = rails_utils
 
-Description goes here.
+A toolkit of utility classes and Rails core extensions.
 
 == Contributing to rails_utils
- 
+
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
 * Fork the project.
